[package]
name = "Tarot_API"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
hyper = { version = "1.8.1", features = ["full"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
log = "0.4.29"
env_logger = "0.11.9"
dotenv = "0.15.0"